--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": ">= 2.4.6",
     "socket.io": ">= 0.8.1",
     "coffee-script": ">= 1.1.2 < 2.0.0",
-    "hamljs": ">= 0.5.1"
+    "hamljs": ">= 0.5.1",
+    "suger-pod": ">=0.0.1"
   },
   "engines": { "node": ">= 0.4.1 < 0.5.0" }
 }
